--- a/app/src/main/res/layout/fragment_notes_list.xml
+++ b/app/src/main/res/layout/fragment_notes_list.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent" tools:context="com.vladzur.mysyncnotes.NotesListFragment">
 
     <ListView
+        android:background="#444444"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/listNotes"/>
