--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -5,6 +5,7 @@
     android:padding="6dip">
 
     <LinearLayout
+        android:background="#444444"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -21,6 +22,7 @@
             android:textSize="14sp"
             android:singleLine="false"
             android:textColor="#ff0380ff"
+            android:background="#444444"
             android:textStyle="bold" />
 
         <TextView
@@ -30,7 +32,17 @@
             android:text="Created"
             android:textSize="12sp"
             android:textStyle="normal"
-            android:textColor="#ff122a48" />
+            android:background="#444444"
+            android:textColor="#EEE7E7" />
+        <TextView
+            android:id="@+id/cuerpo"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Texto"
+            android:textSize="12sp"
+            android:textStyle="normal"
+            android:background="#444444"
+            android:textColor="#EEE7E7" />
     </LinearLayout>
 
 </RelativeLayout>
