--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_user" android:title="@string/action_user"
-        app:showAsAction="withText|ifRoom" />
-    <item android:id="@+id/action_sync" android:title="@string/action_sync"
+    <item android:id="@+id/action_new"
+        android:title="@string/action_user"
+        android:icon="@drawable/ic_add_circle_outline_white_48dp"
         app:showAsAction="withText|ifRoom" />
 </menu>
