--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -24,17 +24,26 @@
             android:hint="Title"
             android:textColorHint="@color/abc_primary_text_material_dark"
             android:textColor="@color/abc_primary_text_material_dark"
-            android:capitalize="sentences" />
+            android:capitalize="sentences"
+            android:maxLines="1"
+            android:background="@color/background_material_dark"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp" />
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:id="@+id/input_body"
             android:nestedScrollingEnabled="false"
-            android:minLines="10"
             android:gravity="top"
             android:textColor="@color/abc_primary_text_material_dark"
-            />
+            android:hint="Texto"
+            android:textColorHint="@color/abc_primary_text_material_dark"
+            android:background="@color/background_material_dark"
+            android:autoText="false"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:capitalize="sentences" />
 
 
     </LinearLayout>
