--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -5,12 +5,12 @@
     android:padding="6dip">
 
     <LinearLayout
-        android:background="#444444"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:background="#ff444040"
         android:layout_alignParentStart="true">
 
         <TextView
@@ -21,9 +21,8 @@
             android:text="Title"
             android:textSize="14sp"
             android:singleLine="false"
-            android:textColor="#ff0380ff"
-            android:background="#444444"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@android:color/primary_text_dark" />
 
         <TextView
             android:id="@+id/fecha"
@@ -32,17 +31,7 @@
             android:text="Created"
             android:textSize="12sp"
             android:textStyle="normal"
-            android:background="#444444"
-            android:textColor="#EEE7E7" />
-        <TextView
-            android:id="@+id/cuerpo"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Texto"
-            android:textSize="12sp"
-            android:textStyle="normal"
-            android:background="#444444"
-            android:textColor="#EEE7E7" />
+            android:textColor="@android:color/primary_text_dark" />
     </LinearLayout>
 
 </RelativeLayout>
