Apariecia de crear nota

--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -8,43 +8,41 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/background_material_dark">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            android:id="@+id/button_save"
-            android:layout_gravity="bottom|right"
-            style="@style/Theme.AppCompat.Light.DarkActionBar" />
-
+        android:background="#ff444040">
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/input_title"
             android:hint="Title"
-            android:textColorHint="@color/abc_primary_text_material_dark"
+            android:textColorHint="#999999"
             android:textColor="@color/abc_primary_text_material_dark"
             android:capitalize="sentences"
-            android:maxLines="1"
-            android:background="@color/background_material_dark"
+            android:inputType="text|textCapWords"
+            android:background="#ff444040"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
+            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
             android:id="@+id/input_body"
             android:nestedScrollingEnabled="false"
             android:gravity="top"
             android:textColor="@color/abc_primary_text_material_dark"
             android:hint="Texto"
-            android:textColorHint="@color/abc_primary_text_material_dark"
-            android:background="@color/background_material_dark"
-            android:autoText="false"
+            android:minLines="5"
+            android:textColorHint="#999999"
+            android:background="#ff444040"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:capitalize="sentences" />
-
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:id="@+id/button_save"
+            android:layout_gravity="bottom|center"
+            style="@style/Theme.AppCompat.Light.DarkActionBar" />
 
     </LinearLayout>
 </FrameLayout>
