--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -5,33 +5,30 @@
     android:padding="6dip">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:background="#ff444040"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/titulo"
             android:layout_width="fill_parent"
             android:layout_height="26dip"
             android:gravity="center_vertical"
-            android:text="Title"
-            android:textSize="14sp"
             android:singleLine="false"
-            android:textStyle="bold"
-            android:textColor="@android:color/primary_text_dark" />
+            android:text="Title"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/fecha"
             android:layout_width="fill_parent"
             android:layout_height="26dip"
             android:text="Created"
-            android:textSize="12sp"
-            android:textStyle="normal"
-            android:textColor="@android:color/primary_text_dark" />
+            android:textSize="@dimen/abc_text_size_small_material"
+            android:textStyle="normal" />
     </LinearLayout>
 
 </RelativeLayout>
