Agregar Scroll para pantallas de ver, editar y crear nota

--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -8,6 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vladzur.mysyncnotes.EditNoteActivity">
 
+
     <EditText
         android:id="@+id/editTitle"
         android:layout_width="match_parent"
@@ -17,13 +18,18 @@
         android:hint="@string/hint_title"
         android:inputType="textCapWords" />
 
-    <EditText
-        android:id="@+id/editBody"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editTitle"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="textMultiLine|textCapSentences" />
+        android:layout_below="@+id/editTitle">
 
+        <EditText
+            android:id="@+id/editBody"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_centerHorizontal="true"
+            android:ems="10"
+            android:inputType="textMultiLine|textCapSentences" />
+    </ScrollView>
 </RelativeLayout>
