--- a/app/src/main/res/layout/activity_view_note.xml
+++ b/app/src/main/res/layout/activity_view_note.xml
@@ -8,18 +8,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vladzur.mysyncnotes.ViewNoteActivity">
 
+
     <TextView
         android:id="@+id/textTitle"
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/textBody"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textTitle"
-        android:layout_centerHorizontal="true"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_below="@+id/textTitle">
 
+        <TextView
+            android:id="@+id/textBody"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_centerHorizontal="true"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </ScrollView>
 </RelativeLayout>
