--- a/app/src/main/res/menu/menu_view_note.xml
+++ b/app/src/main/res/menu/menu_view_note.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.vladzur.mysyncnotes.ViewNoteActivity">
     <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
+        android:orderInCategory="100"
+        android:title="@string/action_share"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_edit"
         android:icon="@drawable/ic_mode_edit_white_48dp"
         android:orderInCategory="100"
